# pplumbing

./: .headache.dirs  CHANGES.md  COPYING.HEADER  LICENSE  NOTICE.md  README.md  cmdlang-climate-err-runner.opam  cmdlang-climate-err-runner.opam.template  cmdlang-cmdliner-err-runner.opam  cmdlang-cmdliner-err-runner.opam.template  cmdlang-cmdliner-runner.opam  cmdlang-cmdliner-runner.opam.template  dune-project  headache.sh  pp-log-tests.opam  pp-log.opam  pplombing-tests.opam  pplombing.opam  pplombing.opam.template  pplumbing-cmdlang-climate-runner.opam  pplumbing-cmdlang-cmdliner-runner.opam  pplumbing-cmdlang-cmdliner-runner.opam.template  pplumbing-dev.opam  pplumbing-err.opam  pplumbing-err.opam.template  pplumbing-log-cli.opam  pplumbing-log-cli.opam.template  pplumbing-log.opam  pplumbing-log.opam.template  pplumbing-pp-tty.opam  pplumbing-pp-tty.opam.template  pplumbing-tests.opam  pplumbing.opam  pplumbing.opam.template
.github/workflows/: ci.yml  dune-pkg-more-ci.yml  edit_dune_project.ml  more-ci.yml  ocaml-4-ci.yml
lib/cmdlang_cmdliner_err_runner/src/: dune
lib/cmdlang_cmdliner_runner/src/: cmdlang_cmdliner_runner.ml  cmdlang_cmdliner_runner.mli  dune
lib/cmdlang_cmdliner_runner/test/: dune
lib/err/src/: dune  err.ml  err.mli  pplumbing_err.ml
lib/err/sub-pkg/: err.ml
lib/err/test/: dune  test__catching_err.ml  test__catching_err.mli  test__color_mode.ml  test__err.ml  test__exit_codes.ml  test__level.ml  test__log_level.ml  test__logs_level.ml  test__pp_of_sexp.ml
lib/err/test/cram/: dune  logs.t  main.ml  run.t
lib/log/src/: dune  log.ml  log.mli  prelude.txt
lib/log/test/: dune
lib/log_cli/src/: dune  log_cli.ml  log_cli.mli
lib/log_cli/test/: dune  test__log_cli.ml
lib/pp_log/src/: dune  pp_log.ml  pp_log.mli  prelude.txt
lib/pp_log/test/: dune  test__examples.ml  test__pp_log.ml
lib/pp_log_cli/src/: dune  pp_log_cli.ml  pp_log_cli.mli
lib/pp_log_cli/test/: dune  test__pp_log_cli.ml
lib/pp_tty/src/: ansi_color.ml  ansi_color.mli  dune  pp_tty.ml  pp_tty.mli  pplumbing_pp_tty.mli
lib/pp_tty/test/: dune
lib/pplumbing/src/: dune  log.ml  log_cli.ml
lib/pplumbing_cmdlang_climate_runner/src/: cmdlang_climate_runner.mli  dune  pplumbing_cmdlang_climate_runner.ml  pplumbing_cmdlang_climate_runner.mli
lib/pplumbing_cmdlang_cmdliner_runner/src/: cmdlang_cmdliner_runner.mli  pplumbing_cmdlang_cmdliner_runner.ml  pplumbing_cmdlang_cmdliner_runner.mli
lib/pplumbing_err/src/: dune  err.ml  pplumbing_err.mli
lib/pplumbing_err/test/: dune  test__color_mode.ml  test__err.ml
lib/pplumbing_err/test/cram/: dune  logs.t  main.ml  main_climate.ml  run-climate.t  test_command.ml  test_command.mli
lib/pplumbing_log/src/: dune  pplumbing_log.ml  pplumbing_log.mli
lib/pplumbing_log/test/: dune  test__log.ml
lib/pplumbing_log_cli/src/: dune  pplumbing_log_cli.ml
lib/pplumbing_log_cli/test/: dune  test__log_cli.ml
lib/pplumbing_pp_tty/src/: pp_tty.mli
lib/pplumbing_pp_tty/test/: dune
src/cmdlang-climate-err-runner/: cmdlang_climate_err_runner.ml  cmdlang_climate_err_runner.mli  dune
src/cmdlang-cmdliner-err-runner/: cmdlang_cmdliner_err_runner.ml  cmdlang_cmdliner_err_runner.mli
src/pplumbing/: cmdlang_cmdliner_runner.ml  log.ml  log_cli.ml  pp_tty.ml
src/pplumbing-err/: code_error.ml  code_error.mli  dune  err.ml  err.mli  pplumbing_err.ml  pplumbing_err.mli
src/pplumbing-log/: dune  log.ml  log.mli  pplumbing_log.ml  pplumbing_log.mli  prelude.txt
src/pplumbing-log-cli/: log_cli.ml  log_cli.mli  pplumbing_log_cli.ml  pplumbing_log_cli.mli
src/pplumbing-pp-tty/: ansi_color.ml  ansi_color.mli  color_mode.ml  color_mode.mli  dune  pp_tty.ml  pp_tty.mli  pplumbing_pp_tty.ml  pplumbing_pp_tty.mli
src/stdlib/: atomic0.ml  atomic0.mli  code_error0.ml  code_error0.mli  dune  dyn0.ml  dyn0.mli  err0.ml  err0.mli  int0.ml  int0.mli  list0.ml  list0.mli  loc0.ml  loc0.mli  ordering0.ml  ordering0.mli  pp0.ml  pp0.mli  pp_tty0.mli  ref0.ml  ref0.mli  sexp0.ml  sexp0.mli  stdlib0.ml  stdlib0.mli  stdlib_for_test.ml  stdlib_for_test.mli  string0.ml  string0.mli  with_equal_and_dyn0.ml  with_equal_and_dyn0.mli
test/cmdlang-cmdliner-err-runner/: dune  test.ml
test/cram/: command_test.ml  command_test.mli  dune  emit-error-color-always.expected  emit-error-color-never.expected  log-styled-color-always.expected  log-styled-color-never.expected  main.ml  main_climate.ml  print-styles-clicolor-force-0.expected  print-styles-clicolor-force.expected  print-styles-color-always.expected  print-styles.t  run.t  sexp-and-dyn.t
test/pplumbing-err/: dune  test__catching_err.ml  test__color_mode.ml  test__err.ml  test__exit_codes.ml  test__level.ml  test__level.mli  test__log_level.ml  test__pp_of_dyn.ml  test__pp_of_sexp.ml
test/pplumbing-err/cram/: main.ml  test_command.ml
test/pplumbing-log/: dune  test__log.ml  test__log.mli
test/pplumbing-log-cli/: dune  test__log_cli.ml
test/pplumbing-pp-tty/: dune  test__ansi_color.ml  test__pp_tty.ml
test/stdlib/: dune  test__ordering.ml  test__ordering.mli  test__stdlib.ml
