(library
 (name test_command)
 (public_name pplumbing-tests.test_command)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Pplumbing_pp_tty
  -open
  Pplumbing_err
  -open
  Pplumbing_log_cli
  -open
  Cmdlang)
 (libraries
  base
  cmdlang
  loc
  logs
  pp
  pplumbing-err
  pplumbing-log-cli
  pplumbing-pp-tty)
 (modules test_command)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))

(executable
 (name main)
 (package pplumbing-tests)
 (public_name pplumbing-tests-err-cram-main)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries cmdlang-cmdliner-err-runner test_command)
 (modules main)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))

(executable
 (name main_climate)
 (package pplumbing-tests)
 (public_name pplumbing-tests-err-cram-main-climate)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries cmdlang-climate-err-runner test_command)
 (modules main_climate)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))

(cram
 (package pplumbing-tests)
 (deps main.exe main_climate.exe))
