(library
 (name command_test)
 (package pplumbing-tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Stdlib_for_test
  -open
  Pplumbing_pp_tty
  -open
  Pplumbing_err
  -open
  Pplumbing_log_cli
  -open
  Cmdlang)
 (libraries
  cmdlang
  logs
  pplumbing-err
  pplumbing-log-cli
  pplumbing-pp-tty
  stdlib_for_test)
 (modules command_test)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))

(executable
 (name main)
 (package pplumbing-tests)
 (public_name pplumbing-tests-err-cram-main)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries cmdlang-cmdliner-err-runner command_test dune-build-info)
 (modules main)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))

(executable
 (name main_climate)
 (package pplumbing-tests)
 (public_name pplumbing-tests-err-cram-main-climate)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries cmdlang-climate-err-runner command_test dune-build-info)
 (modules main_climate)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))

(cram
 (package pplumbing-tests)
 (deps main.exe main_climate.exe))
