(library
 (name command_test)
 (package pplumbing-tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Pplumbing_log
  -open
  Pplumbing_log_cli
  -open
  Stdlib_for_test
  -open
  Cmdlang)
 (libraries cmdlang logs pplumbing-log pplumbing-log-cli stdlib_for_test)
 (modules command_test)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))

(executable
 (name main)
 (package pplumbing-tests)
 (public_name pplumbing-tests-err-cram-main)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries cmdlang-cmdliner-err-runner command_test dune-build-info)
 (modules main)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))

(executable
 (name main_climate)
 (package pplumbing-tests)
 (public_name pplumbing-tests-err-cram-main-climate)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries cmdlang-climate-err-runner command_test dune-build-info)
 (modules main_climate)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))

(cram
 (package pplumbing-tests)
 (deps main.exe main_climate.exe))

(rule
 (package pplumbing-tests)
 (deps main.exe)
 (action
  (with-stdout-to
   print-styles-color-always.output
   (run ./main.exe print-styles --color=always))))

(rule
 (package pplumbing-tests)
 (deps main.exe)
 (action
  (with-stdout-to
   log-styled-color-always.output
   (run ./main.exe log-styled --color=always))))

(rule
 (package pplumbing-tests)
 (alias runtest)
 (action
  (diff log-styled-color-always.expected log-styled-color-always.output)))

(rule
 (package pplumbing-tests)
 (deps main.exe)
 (action
  (with-stdout-to
   log-styled-color-never.output
   (run ./main.exe log-styled --color=never))))

(rule
 (package pplumbing-tests)
 (alias runtest)
 (action
  (diff log-styled-color-never.expected log-styled-color-never.output)))

(rule
 (package pplumbing-tests)
 (alias runtest)
 (action
  (diff print-styles-color-always.expected print-styles-color-always.output)))

; The following rules exercise the environment variable overrides for
; --color=auto. These are limited tests because the output is not a TTY in this
; context, so the Auto resolution that would normally fall through to an isatty
; check always resolves to no-color here. The CLICOLOR_FORCE=1 case is the
; exception: it forces color regardless of the output being a TTY.

(rule
 (package pplumbing-tests)
 (deps main.exe)
 (action
  (with-stdout-to
   print-styles-clicolor-force.output
   (setenv
    CLICOLOR_FORCE
    1
    (run ./main.exe print-styles --color=auto)))))

(rule
 (package pplumbing-tests)
 (alias runtest)
 (action
  (diff
   print-styles-clicolor-force.expected
   print-styles-clicolor-force.output)))

(rule
 (package pplumbing-tests)
 (deps main.exe)
 (action
  (with-stdout-to
   print-styles-clicolor-force-0.output
   (setenv
    CLICOLOR_FORCE
    0
    (run ./main.exe print-styles --color=auto)))))

(rule
 (package pplumbing-tests)
 (alias runtest)
 (action
  (diff
   print-styles-clicolor-force-0.expected
   print-styles-clicolor-force-0.output)))

(rule
 (package pplumbing-tests)
 (deps main.exe)
 (action
  (with-stdout-to
   print-styles-term-dumb.output
   (setenv
    TERM
    dumb
    (run ./main.exe print-styles --color=auto)))))

(rule
 (package pplumbing-tests)
 (alias runtest)
 (action
  (diff print-styles-term-dumb.expected print-styles-term-dumb.output)))

(rule
 (package pplumbing-tests)
 (deps main.exe)
 (action
  (with-stdout-to
   print-styles-clicolor-disabled.output
   (setenv
    CLICOLOR
    0
    (run ./main.exe print-styles --color=auto)))))

(rule
 (package pplumbing-tests)
 (alias runtest)
 (action
  (diff
   print-styles-clicolor-disabled.expected
   print-styles-clicolor-disabled.output)))

(rule
 (package pplumbing-tests)
 (deps main.exe)
 (action
  (with-accepted-exit-codes
   (not 0)
   (with-stderr-to
    emit-error-color-never.output
    (run ./main.exe emit-error --color=never)))))

(rule
 (package pplumbing-tests)
 (alias runtest)
 (action
  (diff emit-error-color-never.expected emit-error-color-never.output)))

(rule
 (package pplumbing-tests)
 (deps main.exe)
 (action
  (with-accepted-exit-codes
   (not 0)
   (with-stderr-to
    emit-error-color-always.output
    (run ./main.exe emit-error --color=always)))))

(rule
 (package pplumbing-tests)
 (alias runtest)
 (action
  (diff emit-error-color-always.expected emit-error-color-always.output)))
