(library
 (name pplumbing_err_test)
 (package pplumbing-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Pplumbing_err
  -open
  Pplumbing_log_cli
  -open
  Expect_test_helpers_base)
 (libraries
  base
  cmdliner
  expect_test_helpers_core.expect_test_helpers_base
  fpath
  loc
  logs
  pp
  pplumbing_err
  pplumbing_log_cli)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
