(library
 (name pplumbing_log_cli_test)
 (package pplumbing-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Stdlib_for_test
  -open
  Pplumbing_err
  -open
  Pplumbing_log_cli
  -open
  Cmdlang)
 (libraries
  base
  cmdlang
  cmdlang-to-cmdliner
  cmdliner
  logs
  pplumbing_err
  pplumbing_log_cli
  stdlib_for_test)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
