(library
 (name cmdlang_cmdliner_runner)
 (public_name cmdlang-cmdliner-runner)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries cmdlang cmdlang-to-cmdliner cmdliner pp-log.err)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
