(library
 (name pplumbing_cmdlang_cmdliner_runner)
 (public_name pplumbing-cmdlang-cmdliner-runner)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Pplumbing_err)
 (libraries cmdlang cmdlang-to-cmdliner cmdliner pplumbing-err)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
