(library
 (name pp_log_cli)
 (public_name pp-log.cli)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a -open Cmdlang)
 (libraries cmdlang err fmt fmt.tty logs logs.fmt pp pp_tty stdune)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
