(library
 (name pp_tty)
 (public_name pplombing.pp-tty)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries dyn loc ordering pp stdune)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
