(library
 (name err)
 (public_name pplumbing.err)
 (flags :standard -w +a-4-40-41-42-44-45-48-66-70 -warn-error +a)
 (libraries pplumbing-err)
 (modules err)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))

(library
 (name pp_tty)
 (public_name pplumbing.pp-tty)
 (flags :standard -w +a-4-40-41-42-44-45-48-66-70 -warn-error +a)
 (libraries pplumbing-pp-tty)
 (modules pp_tty)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))

(library
 (name cmdlang_cmdliner_runner)
 (public_name pplumbing.cmdlang-cmdliner-runner)
 (flags :standard -w +a-4-40-41-42-44-45-48-66-70 -warn-error +a)
 (libraries cmdlang-cmdliner-err-runner)
 (modules cmdlang_cmdliner_runner)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
