(library
 (name pplumbing_cmdlang_climate_runner)
 (public_name pplumbing-cmdlang-climate-runner)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Pplumbing_err)
 (libraries climate cmdlang cmdlang-to-climate pplumbing-err)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
