(library
 (name pplumbing_log)
 (public_name pplumbing-log)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Pplumbing_pp_tty)
 (libraries logs pp pplumbing-pp-tty)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))

(mdx
 (package pplumbing-tests)
 (deps
  (package pplumbing-log)
  (package pplumbing-pp-tty))
 (files :standard - *.mli)
 (preludes prelude.txt))
